# cmake-ref

./: CMakeLists.txt  Foo.cpp  README.md
Bar/: Bar.cpp  Bar.h  CMakeLists.txt
